# lvm-class

./: AGENTS.md  Cargo.toml  fixtures.toml
openspec/: project.md
snapshots/: jdk-java-io-BufferedInputStream.class.snap  jdk-java-io-BufferedOutputStream.class.snap  jdk-java-io-BufferedWriter.class.snap  jdk-java-io-FileDescriptor$1.class.snap  jdk-java-io-FileDescriptor.class.snap  jdk-java-io-FileInputStream.class.snap  jdk-java-io-FileOutputStream.class.snap  jdk-java-io-FilterInputStream.class.snap  jdk-java-io-FilterOutputStream.class.snap  jdk-java-io-InputStream.class.snap  jdk-java-io-ObjectStreamField.class.snap  jdk-java-io-OutputStream.class.snap  jdk-java-io-OutputStreamWriter.class.snap  jdk-java-io-PrintStream.class.snap  jdk-java-io-Writer.class.snap  jdk-java-lang-AbstractStringBuilder.class.snap  jdk-java-lang-ArithmeticException.class.snap  jdk-java-lang-ArrayIndexOutOfBoundsException.class.snap  jdk-java-lang-AssertionError.class.snap  jdk-java-lang-Boolean.class.snap  jdk-java-lang-Byte.class.snap  jdk-java-lang-Class.class.snap  jdk-java-lang-ClassLoader.class.snap  jdk-java-lang-Double.class.snap  jdk-java-lang-Error.class.snap  jdk-java-lang-Exception.class.snap  jdk-java-lang-Float.class.snap  jdk-java-lang-IllegalArgumentException.class.snap  jdk-java-lang-IndexOutOfBoundsException.class.snap  jdk-java-lang-Integer$IntegerCache.class.snap  jdk-java-lang-Integer.class.snap  jdk-java-lang-InternalError.class.snap  jdk-java-lang-Math.class.snap  jdk-java-lang-NegativeArraySizeException.class.snap  jdk-java-lang-NullPointerException.class.snap  (+172 more)
(+62 files in other folders)
